--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "machine-learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNsxxKp7HCHr35LODqNOUUg",
+      "authorship_tag": "ABX9TyPeKdF+hAwwFZOFtNZkksCv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WhuYbC_8VE_x",
-        "outputId": "b850ecfa-182b-4629-9ed9-df9714980c09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b850ecfa-182b-4629-9ed9-df9714980c09"
       },
       "source": [
         "!pip install sklearn"
@@ -80,12 +80,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y5EXLzOjWMIb",
-        "outputId": "8f55bda8-e0f2-47c6-826e-64cf8e559a5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 200
-        }
+        },
+        "id": "Y5EXLzOjWMIb",
+        "outputId": "8f55bda8-e0f2-47c6-826e-64cf8e559a5e"
       },
       "source": [
         "URL = 'https://raw.githubusercontent.com/martinpdab/asapa/main/dataset.csv'\n",
@@ -201,19 +201,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "V1srYqHmXWVd",
-        "outputId": "5a3f529e-2960-46b1-e97d-ba07cb1e324d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 200
-        }
+        },
+        "id": "V1srYqHmXWVd",
+        "outputId": "1726738a-01db-4159-fe18-61ff91ebce71"
       },
       "source": [
         "from sklearn.utils import shuffle\n",
-        "df = shuffle(dataframe)\n",
-        "df.tail()"
+        "df = shuffle(dataframe)\n"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,54 +247,54 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>2708</th>\n",
-              "      <td>rumah-tangga</td>\n",
-              "      <td>psikis</td>\n",
+              "      <th>4925</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>lainnya</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>dewasa</td>\n",
-              "      <td>pacar/teman</td>\n",
-              "      <td>1</td>\n",
+              "      <td>anak-anak</td>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4001</th>\n",
+              "      <th>433</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
               "      <td>lainnya</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>402</th>\n",
+              "      <td>rumah-tangga</td>\n",
               "      <td>fisik</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>remaja</td>\n",
               "      <td>pacar/teman</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>860</th>\n",
-              "      <td>rumah-tangga</td>\n",
-              "      <td>fisik</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>dewasa</td>\n",
-              "      <td>pacar/teman</td>\n",
               "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3582</th>\n",
-              "      <td>fasilitas-umum</td>\n",
+              "      <th>4850</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>penelantaran</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>anak-anak</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2174</th>\n",
+              "      <td>rumah-tangga</td>\n",
               "      <td>psikis</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>remaja</td>\n",
               "      <td>keluarga/saudara</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1710</th>\n",
-              "      <td>rumah-tangga</td>\n",
-              "      <td>seksual</td>\n",
               "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>dewasa</td>\n",
-              "      <td>majikan</td>\n",
-              "      <td>3</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -303,11 +302,11 @@
             ],
             "text/plain": [
               "     Tempat Kejadian  ... Mitigasi Resiko\n",
-              "2708    rumah-tangga  ...               1\n",
-              "4001         lainnya  ...               2\n",
-              "860     rumah-tangga  ...               3\n",
-              "3582  fasilitas-umum  ...               2\n",
-              "1710    rumah-tangga  ...               3\n",
+              "4925         lainnya  ...               2\n",
+              "433     rumah-tangga  ...               3\n",
+              "402     rumah-tangga  ...               3\n",
+              "4850         lainnya  ...               3\n",
+              "2174    rumah-tangga  ...               1\n",
               "\n",
               "[5 rows x 7 columns]"
             ]
@@ -315,18 +314,137 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 17
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FRQypu6oYOUY",
-        "outputId": "6fb02d60-a5d2-430d-cbd8-65864050c9ec",
+        "id": "snLKbaMUcQZj",
+        "outputId": "3e292bda-3058-4152-ad49-a51dadbbf1be",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        }
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tempat Kejadian</th>\n",
+              "      <th>Jenis Kekerasan</th>\n",
+              "      <th>Banyak Kekerasan yang dialami</th>\n",
+              "      <th>Banyak Korban Kekerasan</th>\n",
+              "      <th>Usia Korban</th>\n",
+              "      <th>Hubungan Pelaku dengan Korban</th>\n",
+              "      <th>Mitigasi Resiko</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>4925</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>anak-anak</td>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>433</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>402</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
+              "      <td>pacar/teman</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4850</th>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>penelantaran</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>anak-anak</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2174</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>psikis</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
+              "      <td>keluarga/saudara</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Tempat Kejadian  ... Mitigasi Resiko\n",
+              "4925         lainnya  ...               2\n",
+              "433     rumah-tangga  ...               3\n",
+              "402     rumah-tangga  ...               3\n",
+              "4850         lainnya  ...               3\n",
+              "2174    rumah-tangga  ...               1\n",
+              "\n",
+              "[5 rows x 7 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FRQypu6oYOUY",
+        "outputId": "6fb02d60-a5d2-430d-cbd8-65864050c9ec"
       },
       "source": [
         "train, test = train_test_split(df, test_size=0.1)\n",
@@ -380,13 +498,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3_0voNPRaHUz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3_0voNPRaHUz",
+        "outputId": "b4fc7e84-e0bf-4b05-c6c1-f0cadd33424b"
       },
       "source": [
         "for feature_batch, label_batch in train_ds.take(1):\n",
-        "  print('Every feature:', list(feature_batch.keys()))\n",
-        "  print('A batch of ages:', feature_batch['age'])\n",
-        "  print('A batch of targets:', label_batch )"
+        "  print('Parameter:', list(feature_batch.keys()))\n",
+        "  print('Tempat Kejadian:', feature_batch['Tempat Kejadian'])\n",
+        "  print('Jenis Kekerasan:', feature_batch['Jenis Kekerasan'])\n",
+        "  print('Banyak Kekerasan:', feature_batch['Banyak Kekerasan yang dialami'])\n",
+        "  print('Banyak Korban:', feature_batch['Banyak Korban Kekerasan'])\n",
+        "  print('Usia Korban:', feature_batch['Usia Korban'])\n",
+        "  print('Hubungan Pelaku dengan Korban:', feature_batch['Hubungan Pelaku dengan Korban'])\n",
+        "  print('Label:', label_batch )"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Parameter: ['Tempat Kejadian', 'Jenis Kekerasan', 'Banyak Kekerasan yang dialami', 'Banyak Korban Kekerasan', 'Usia Korban', 'Hubungan Pelaku dengan Korban']\n",
+            "Tempat Kejadian: tf.Tensor(\n",
+            "[b'lainnya' b'rumah-tangga' b'rumah-tangga' b'rumah-tangga'\n",
+            " b'rumah-tangga'], shape=(5,), dtype=string)\n",
+            "Jenis Kekerasan: tf.Tensor([b'seksual' b'seksual' b'seksual' b'psikis' b'psikis'], shape=(5,), dtype=string)\n",
+            "Banyak Kekerasan: tf.Tensor([1 1 1 1 1], shape=(5,), dtype=int64)\n",
+            "Banyak Korban: tf.Tensor([1 1 1 1 1], shape=(5,), dtype=int64)\n",
+            "Usia Korban: tf.Tensor([b'anak-anak' b'remaja' b'dewasa' b'dewasa' b'dewasa'], shape=(5,), dtype=string)\n",
+            "Hubungan Pelaku dengan Korban: tf.Tensor([b'tetangga' b'orang-tua' b'pacar/teman' b'keluarga/saudara' b'majikan'], shape=(5,), dtype=string)\n",
+            "Label: tf.Tensor([3 3 3 1 1], shape=(5,), dtype=int64)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Exck3gvAdK0_"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-phADmTyb-fy"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
