--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "machine-learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPeKdF+hAwwFZOFtNZkksCv",
+      "authorship_tag": "ABX9TyMezg1ohtmvXILts3Kb4mcw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,6 @@
         "import pandas as pd\n",
         "\n",
         "try:\n",
-        "  # %tensorflow_version only exists in Colab.\n",
         "  %tensorflow_version 2.x\n",
         "except Exception:\n",
         "  pass\n",
@@ -321,12 +320,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "snLKbaMUcQZj",
-        "outputId": "3e292bda-3058-4152-ad49-a51dadbbf1be",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 200
-        }
+        },
+        "id": "snLKbaMUcQZj",
+        "outputId": "3e292bda-3058-4152-ad49-a51dadbbf1be"
       },
       "source": [
         "df.head()"
@@ -487,7 +486,7 @@
         "id": "nQ7pY4vuZ8cH"
       },
       "source": [
-        "batch_size = 5 # A small batch sized is used for demonstration purposes\n",
+        "batch_size = 5\n",
         "train_ds = df_to_dataset(train, batch_size=batch_size)\n",
         "val_ds = df_to_dataset(val, shuffle=False, batch_size=batch_size)\n",
         "test_ds = df_to_dataset(test, shuffle=False, batch_size=batch_size)"
@@ -541,7 +540,10 @@
         "id": "Exck3gvAdK0_"
       },
       "source": [
-        ""
+        "tempat_kejadian = feature_column.categorical_column_with_vocabulary_list(\n",
+        "                'Tempat Kejadian', ['rumah-tangga', 'tempat-kerja', 'sekolah', 'fasilitas-umum', 'lainnya'])\n",
+        "thal_one_hot = feature_column.indicator_column(thal)\n",
+        "feature_columns.append(thal_one_hot)\n"
       ],
       "execution_count": null,
       "outputs": []
