--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "machine-learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPonH6fjQxASpmFgYYyQ4id",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,12 +33,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54e50224-a45f-43af-b6a2-64bb655e1f0f"
+        "outputId": "68c695a6-6550-4314-f2e3-a5ab8f069da0"
       },
       "source": [
         "!pip install sklearn"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -47,8 +46,8 @@
             "Requirement already satisfied: sklearn in /usr/local/lib/python3.7/dist-packages (0.0)\n",
             "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.7/dist-packages (from sklearn) (0.22.2.post1)\n",
             "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.19.5)\n",
-            "Requirement already satisfied: scipy>=0.17.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.4.1)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.0.1)\n"
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.0.1)\n",
+            "Requirement already satisfied: scipy>=0.17.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn->sklearn) (1.4.1)\n"
           ],
           "name": "stdout"
         }
@@ -73,7 +72,7 @@
         "from tensorflow.keras import layers\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -81,17 +80,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 200
+          "height": 206
         },
         "id": "Y5EXLzOjWMIb",
-        "outputId": "60a79da1-0326-4dbc-d809-417eca742659"
+        "outputId": "9622e59c-beca-4272-a27c-fbeff41d59db"
       },
       "source": [
         "URL = 'https://raw.githubusercontent.com/martinpdab/asapa/main/dataset.csv'\n",
         "dataframe = pd.read_csv(URL)\n",
         "dataframe.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +192,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 3
         }
       ]
     },
@@ -206,7 +205,7 @@
         "from sklearn.utils import shuffle\n",
         "df = shuffle(dataframe)\n"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -214,15 +213,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 200
+          "height": 224
         },
         "id": "snLKbaMUcQZj",
-        "outputId": "f8542660-dc08-41d3-c8eb-4d993ee1c2d9"
+        "outputId": "f03b3ab9-3fba-448e-bac4-46610b6f1ab9"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,54 +256,54 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>3312</th>\n",
-              "      <td>fasilitas-umum</td>\n",
-              "      <td>fisik</td>\n",
+              "      <th>2409</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>psikis</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>remaja</td>\n",
-              "      <td>lainnya</td>\n",
-              "      <td>2</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>tetangga</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>3732</th>\n",
-              "      <td>fasilitas-umum</td>\n",
-              "      <td>penelantaran</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>anak-anak</td>\n",
-              "      <td>orang-tua</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4850</th>\n",
-              "      <td>lainnya</td>\n",
-              "      <td>penelantaran</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>anak-anak</td>\n",
-              "      <td>orang-tua</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>186</th>\n",
+              "      <th>592</th>\n",
               "      <td>rumah-tangga</td>\n",
               "      <td>fisik</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
-              "      <td>anak-anak</td>\n",
-              "      <td>lainnya</td>\n",
+              "      <td>dewasa</td>\n",
+              "      <td>suami/istri</td>\n",
               "      <td>3</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1279</th>\n",
+              "      <th>1170</th>\n",
               "      <td>rumah-tangga</td>\n",
               "      <td>seksual</td>\n",
               "      <td>1</td>\n",
               "      <td>1</td>\n",
               "      <td>remaja</td>\n",
-              "      <td>tetangga</td>\n",
+              "      <td>orang-tua</td>\n",
               "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>82</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>fisik</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>balita</td>\n",
+              "      <td>keluarga/saudara</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2939</th>\n",
+              "      <td>rumah-tangga</td>\n",
+              "      <td>lainnya</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>remaja</td>\n",
+              "      <td>orang-tua</td>\n",
+              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -312,11 +311,11 @@
             ],
             "text/plain": [
               "     Tempat Kejadian  ... Mitigasi Resiko\n",
-              "3312  fasilitas-umum  ...               2\n",
-              "3732  fasilitas-umum  ...               3\n",
-              "4850         lainnya  ...               3\n",
-              "186     rumah-tangga  ...               3\n",
-              "1279    rumah-tangga  ...               3\n",
+              "2409    rumah-tangga  ...               1\n",
+              "592     rumah-tangga  ...               3\n",
+              "1170    rumah-tangga  ...               3\n",
+              "82      rumah-tangga  ...               3\n",
+              "2939    rumah-tangga  ...               1\n",
               "\n",
               "[5 rows x 7 columns]"
             ]
@@ -324,7 +323,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 5
         }
       ]
     },
@@ -335,14 +334,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FRQypu6oYOUY",
-        "outputId": "62af6652-e2be-4d3c-801f-d37c4fbfbf04"
+        "outputId": "a34255df-eae8-4d0b-f7c6-185d51f314da"
       },
       "source": [
         "train, test = train_test_split(df, test_size=0.1)\n",
         "print(len(train), 'train examples')\n",
         "print(len(test), 'test examples')"
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +368,7 @@
         "  ds = ds.batch(batch_size)\n",
         "  return ds"
       ],
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -382,7 +381,7 @@
         "train_ds = df_to_dataset(train, batch_size=batch_size)\n",
         "test_ds = df_to_dataset(test, shuffle=False, batch_size=batch_size)"
       ],
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -392,7 +391,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3_0voNPRaHUz",
-        "outputId": "6621988c-2dc6-4826-c050-eadfff30b7fd"
+        "outputId": "84b1c6c0-9598-4ab3-bc6d-47b4594e154a"
       },
       "source": [
         "for feature_batch, label_batch in train_ds.take(1):\n",
@@ -405,19 +404,23 @@
         "  print('Hubungan Pelaku dengan Korban:', feature_batch['Hubungan Pelaku dengan Korban'])\n",
         "  print('Label:', label_batch )"
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Parameter: ['Tempat Kejadian', 'Jenis Kekerasan', 'Banyak Kekerasan yang dialami', 'Banyak Korban Kekerasan', 'Usia Korban', 'Hubungan Pelaku dengan Korban']\n",
-            "Tempat Kejadian: tf.Tensor([b'rumah-tangga' b'lainnya' b'rumah-tangga' b'lainnya' b'lainnya'], shape=(5,), dtype=string)\n",
-            "Jenis Kekerasan: tf.Tensor([b'lainnya' b'psikis' b'seksual' b'fisik' b'fisik'], shape=(5,), dtype=string)\n",
-            "Banyak Kekerasan: tf.Tensor([1 1 1 1 2], shape=(5,), dtype=int64)\n",
-            "Banyak Korban: tf.Tensor([1 1 1 2 1], shape=(5,), dtype=int64)\n",
-            "Usia Korban: tf.Tensor([b'anak-anak' b'dewasa' b'dewasa' b'anak-anak' b'lansia'], shape=(5,), dtype=string)\n",
-            "Hubungan Pelaku dengan Korban: tf.Tensor([b'orang-tua' b'pacar/teman' b'suami/istri' b'lainnya' b'keluarga/saudara'], shape=(5,), dtype=string)\n",
-            "Label: tf.Tensor([2 2 1 3 3], shape=(5,), dtype=int64)\n"
+            "Tempat Kejadian: tf.Tensor(\n",
+            "[b'rumah-tangga' b'fasilitas-umum' b'fasilitas-umum' b'fasilitas-umum'\n",
+            " b'rumah-tangga'], shape=(5,), dtype=string)\n",
+            "Jenis Kekerasan: tf.Tensor([b'fisik' b'fisik' b'seksual' b'lainnya' b'psikis'], shape=(5,), dtype=string)\n",
+            "Banyak Kekerasan: tf.Tensor([1 2 1 1 1], shape=(5,), dtype=int64)\n",
+            "Banyak Korban: tf.Tensor([1 1 1 1 1], shape=(5,), dtype=int64)\n",
+            "Usia Korban: tf.Tensor([b'dewasa' b'dewasa' b'dewasa' b'dewasa' b'dewasa'], shape=(5,), dtype=string)\n",
+            "Hubungan Pelaku dengan Korban: tf.Tensor(\n",
+            "[b'keluarga/saudara' b'suami/istri' b'keluarga/saudara' b'lainnya'\n",
+            " b'majikan'], shape=(5,), dtype=string)\n",
+            "Label: tf.Tensor([2 3 2 2 1], shape=(5,), dtype=int64)\n"
           ],
           "name": "stdout"
         }
@@ -426,34 +429,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Exck3gvAdK0_",
-        "outputId": "9827ea41-b302-4212-ab75-ee6e0cfd4c8c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 223
-        }
+        "id": "Exck3gvAdK0_"
       },
       "source": [
-        "feature_column = []\n",
-        "tempat_kejadian = feature_column.categorical_column_with_vocabulary_list(\n",
+        "feature_columns = []\n",
+        "\n",
+        "tempat_kejadian = tf.feature_column.categorical_column_with_vocabulary_list(\n",
         "                'Tempat Kejadian', ['rumah-tangga', 'tempat-kerja', 'sekolah', 'fasilitas-umum', 'lainnya'])\n",
-        "tempat_one_hot = feature_column.indicator_column(tempat_kejadian)\n",
-        "feature_columns.append(tempat_one_hot)\n"
+        "tempat_one_hot = tf.feature_column.indicator_column(tempat_kejadian)\n",
+        "feature_columns.append(tempat_one_hot)\n",
+        "\n",
+        "jenis_kekerasan = tf.feature_column.categorical_column_with_vocabulary_list(\n",
+        "    'Jenis Kekerasan', ['fisik', 'seksual', 'psikis', 'penelantaran', 'lainnya', 'eksploitasi', 'traficking'])\n",
+        "jenis_one_hot = tf.feature_column.indicator_column(jenis_kekerasan)\n",
+        "feature_columns.append(jenis_one_hot)"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-170c8616dcaf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeature_column\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m tempat_kejadian = feature_column.categorical_column_with_vocabulary_list(\n\u001b[0m\u001b[1;32m      3\u001b[0m                 'Tempat Kejadian', ['rumah-tangga', 'tempat-kerja', 'sekolah', 'fasilitas-umum', 'lainnya'])\n\u001b[1;32m      4\u001b[0m \u001b[0mtempat_one_hot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_column\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindicator_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtempat_kejadian\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfeature_columns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtempat_one_hot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'categorical_column_with_vocabulary_list'"
-          ]
-        }
-      ]
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "code",
