--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -239,12 +239,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8PVI6bXigD_r",
-        "outputId": "621fbdcf-6f7a-4f69-887b-11d2ac48a9d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 200
-        }
+        },
+        "id": "8PVI6bXigD_r",
+        "outputId": "621fbdcf-6f7a-4f69-887b-11d2ac48a9d5"
       },
       "source": [
         "df['target'] = np.where(df['label']==2, 1, 0)\n",
@@ -607,7 +607,8 @@
         "              loss=tf.keras.losses.BinaryCrossentropy(from_logits=True),\n",
         "              metrics=['accuracy'])\n",
         "\n",
-        "johnjjt = model.fit(train_ds,\n",
+        "\n",
+        "history = model.fit(train_ds,\n",
         "                  validation_data=test_ds,\n",
         "                  callbacks = [callbacks],\n",
         "                  epochs=25)"
@@ -643,29 +644,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xgO3KxWujlpW",
-        "outputId": "3c64563d-1dce-4a32-d037-2989a1c90ba5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 588
-        }
+        },
+        "id": "xgO3KxWujlpW",
+        "outputId": "3c64563d-1dce-4a32-d037-2989a1c90ba5"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
         "import numpy\n",
         "\n",
-        "print(johnjjt.history.keys())\n",
+        "print(history.history.keys())\n",
         "# summarize history for accuracy\n",
-        "plt.plot(johnjjt.history['accuracy'])\n",
-        "plt.plot(johnjjt.history['val_accuracy'])\n",
+        "plt.plot(history.history['accuracy'])\n",
+        "plt.plot(history.history['val_accuracy'])\n",
         "plt.title('model accuracy')\n",
         "plt.ylabel('accuracy')\n",
         "plt.xlabel('epoch')\n",
         "plt.legend(['train', 'test'], loc='upper left')\n",
         "plt.show()\n",
         "# summarize history for loss\n",
-        "plt.plot(johnjjt.history['loss'])\n",
-        "plt.plot(johnjjt.history['val_loss'])\n",
+        "plt.plot(history.history['loss'])\n",
+        "plt.plot(history.history['val_loss'])\n",
         "plt.title('model loss')\n",
         "plt.ylabel('loss')\n",
         "plt.xlabel('epoch')\n",
