--- a/dataset_EDA.ipynb
+++ b/dataset_EDA.ipynb
@@ -47,12 +47,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Dlehc5TdmZVB",
-        "outputId": "9b1150c6-8ef3-4b27-a456-0606e4797df4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "Dlehc5TdmZVB",
+        "outputId": "9b1150c6-8ef3-4b27-a456-0606e4797df4"
       },
       "source": [
         "URL = 'https://raw.githubusercontent.com/martinpdab/asapa/main/dataset/dataset-kasus-shuffled%20(1).csv'\n",
@@ -235,11 +235,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_RvKNeWGmsgV",
-        "outputId": "d5682986-3ae7-430e-d818-761e85b8bfad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_RvKNeWGmsgV",
+        "outputId": "d5682986-3ae7-430e-d818-761e85b8bfad"
       },
       "source": [
         "train, test = train_test_split(dataframe, test_size=0.1)\n",
@@ -261,11 +261,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bFXVQhoqn96C",
-        "outputId": "c972e880-d864-4a52-976f-d199b62f754b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bFXVQhoqn96C",
+        "outputId": "c972e880-d864-4a52-976f-d199b62f754b"
       },
       "source": [
         "train.info()"
@@ -297,12 +297,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4RqdCF5job6U",
-        "outputId": "7d6d662f-3440-4498-8a1e-34a13b0fc7c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "4RqdCF5job6U",
+        "outputId": "7d6d662f-3440-4498-8a1e-34a13b0fc7c9"
       },
       "source": [
         "train.describe()"
@@ -411,11 +411,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "scsGBwbnranv",
-        "outputId": "bfd748fe-ba1a-45bf-bdd2-eda93a5cde08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "scsGBwbnranv",
+        "outputId": "bfd748fe-ba1a-45bf-bdd2-eda93a5cde08"
       },
       "source": [
         "dataframe.info()"
@@ -447,12 +447,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1J6UVpQwrhR1",
-        "outputId": "ab0b05ba-989e-4f9c-9021-0ccff3ebc6f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "1J6UVpQwrhR1",
+        "outputId": "ab0b05ba-989e-4f9c-9021-0ccff3ebc6f9"
       },
       "source": [
         "dataframe.describe()"
@@ -561,12 +561,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6VGPMy60r3vH",
-        "outputId": "4b6c7604-6309-4c3a-fc8e-9038d405bb3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "id": "6VGPMy60r3vH",
+        "outputId": "4b6c7604-6309-4c3a-fc8e-9038d405bb3c"
       },
       "source": [
         "#sns.countplot(x='label', data=train);\n",
@@ -604,11 +604,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tcw6Vu7tuwcA",
-        "outputId": "7731dac2-f891-47ca-ba13-8874691e10c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tcw6Vu7tuwcA",
+        "outputId": "7731dac2-f891-47ca-ba13-8874691e10c4"
       },
       "source": [
         "dataframe.groupby(['label','jenis'])['label'].count()"
@@ -652,12 +652,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LO6GBE6dvAOC",
-        "outputId": "3ade6c4e-5569-4a6d-e9ba-073361f54e0e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        }
+        },
+        "id": "LO6GBE6dvAOC",
+        "outputId": "3ade6c4e-5569-4a6d-e9ba-073361f54e0e"
       },
       "source": [
         "sns.catplot(x='jenis', col='label', kind='count', data=dataframe);"
@@ -682,12 +682,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zdLSaGRBvikn",
-        "outputId": "027a763c-881a-4100-dce6-7ce67dada341",
+        "id": "EYLf1N2g8MRv",
+        "outputId": "51d4521f-5700-491b-8f23-5161d062f72a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dataframe.groupby(['label','banyak_kekerasan'])['label'].count()"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "label  banyak_kekerasan\n",
+              "0      1                   1434\n",
+              "1      1                   1629\n",
+              "       2                     23\n",
+              "2      1                   2040\n",
+              "       2                     72\n",
+              "       3                     18\n",
+              "       4                      3\n",
+              "Name: label, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        }
+        },
+        "id": "zdLSaGRBvikn",
+        "outputId": "027a763c-881a-4100-dce6-7ce67dada341"
       },
       "source": [
         "sns.catplot(x='banyak_kekerasan', col='label', kind='count', data=dataframe);"
@@ -712,12 +748,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Rxq7B36_w0zh",
-        "outputId": "41210bfa-574a-4adc-f572-55ea019293db",
+        "id": "-iCs1XbC9gBG",
+        "outputId": "7624a56b-2463-4345-a50b-51a53626f4f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dataframe.groupby(['label','banyak_korban'])['label'].count()"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "label  banyak_korban\n",
+              "0      1                1369\n",
+              "       2                  60\n",
+              "       3                   5\n",
+              "1      1                1637\n",
+              "       2                  15\n",
+              "2      1                1969\n",
+              "       2                 154\n",
+              "       3                  10\n",
+              "Name: label, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        }
+        },
+        "id": "Rxq7B36_w0zh",
+        "outputId": "41210bfa-574a-4adc-f572-55ea019293db"
       },
       "source": [
         "sns.catplot(x='banyak_korban', col='label', kind='count', data=dataframe);"
@@ -742,12 +815,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jY6wUavuxbX-",
-        "outputId": "ca11796e-e70d-49e6-db77-a1bfd7839377",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        }
+        },
+        "id": "jY6wUavuxbX-",
+        "outputId": "ca11796e-e70d-49e6-db77-a1bfd7839377"
       },
       "source": [
         "sns.catplot(x='usia', col='label', kind='count', data=dataframe);"
@@ -772,12 +845,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pd1Jr-jd0c-1",
-        "outputId": "27e1a7e3-f9de-4e61-ab1b-5f66a8a87043",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        }
+        },
+        "id": "pd1Jr-jd0c-1",
+        "outputId": "27e1a7e3-f9de-4e61-ab1b-5f66a8a87043"
       },
       "source": [
         "sns.catplot(x='hubungan_pelaku', col='label', kind='count', data=dataframe);"
@@ -802,12 +875,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "72jvAdru05T4",
-        "outputId": "5ebfa492-66c6-423a-e1c4-f4ed02cd2358",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 406
-        }
+        },
+        "id": "72jvAdru05T4",
+        "outputId": "5ebfa492-66c6-423a-e1c4-f4ed02cd2358"
       },
       "source": [
         "sns.catplot(x='hubungan_pelaku', col='jenis', kind='count', data=dataframe);"
@@ -832,12 +905,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SnabXfZz6wno",
-        "outputId": "a462efd6-8d69-48f7-cff5-f7bf0bb5d4e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
-        }
+        },
+        "id": "SnabXfZz6wno",
+        "outputId": "a462efd6-8d69-48f7-cff5-f7bf0bb5d4e7"
       },
       "source": [
         "sns.catplot(x='tempat', col='label', kind='count', data=dataframe);"
