--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -667,10 +667,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9Nw_QPGTix9M",
-        "outputId": "2e0a41cb-5082-4bf8-ff6c-935834a8306f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2e0a41cb-5082-4bf8-ff6c-935834a8306f"
       },
       "source": [
         "class myCallback(tf.keras.callbacks.Callback):\n",
@@ -980,10 +980,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WkVsagbIg-xu",
-        "outputId": "3b140db3-fe44-4596-96c1-46e381b75e81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b140db3-fe44-4596-96c1-46e381b75e81"
       },
       "source": [
         "import time\n",
@@ -1021,11 +1021,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "amRszMCFuwn8",
-        "outputId": "566afa96-c10c-40c8-f778-11dbbd693b78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "amRszMCFuwn8",
+        "outputId": "566afa96-c10c-40c8-f778-11dbbd693b78"
       },
       "source": [
         "sample = {\n",
@@ -1046,10 +1046,7 @@
         "elif predictions[0][1]==1:\n",
         "    print(\"Mitigasi resiko: tinggi, dan non krisis\")\n",
         "elif predictions[0][2]==1:\n",
-        "    print(\"Mitigasi resiko: tinggi, dan krisis\")\n",
-        "\n",
-        "\n",
-        "\n"
+        "    print(\"Mitigasi resiko: tinggi, dan krisis\")"
       ],
       "execution_count": 61,
       "outputs": [
